feat: Add new components and features for map and vehicle tracking
- Implemented MapPanelLayout component for responsive map and panel layout.
- Created RingMeter component for visual representation of values with labels.
- Developed RoleSwitcherCard for role selection with radio buttons.
- Added TabBarIcon component for consistent tab bar icons.
- Built VehicleMap component for displaying vehicle routes and stops on a map.
- Introduced GoogleFleetMap component for web-specific map functionality.
- Enhanced GoogleFleetMap.web.tsx with Google Maps integration and vehicle markers.
- Defined roles and their labels in constants/roles.ts.
- Created routing logic based on user roles in constants/routes.ts.
- Set up API client in lib/api/client.ts for backend communication.
- Implemented ETA calculation in lib/eta.ts for vehicle arrival estimates.
- Mocked vehicle location feed in lib/mock/locationFeed.ts for testing.
- Established notification handling in lib/notifications.ts for alerts.
- Integrated Google Maps loading logic in lib/web/googleMaps.ts.
- Created Zustand store for authentication in store/auth.ts.
- Developed location state management in store/location.ts for vehicle tracking.
- Implemented notification state management in store/notifications.ts for alerts.
- Created trip state management in store/trip.ts for trip tracking.

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "SecureStop",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/icon.png",
     "scheme": "securestop",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
